Start unique color names

--- a/dos33.html
+++ b/dos33.html
@@ -182,6 +182,18 @@ span.todo {
 .c10 { background-color:#F0F; color: #000;  }
 .c11 { background-color:#F08; color: #000;  }
 
+.c20 { background-color:#F00; color: #000; }
+.c21 { background-color:#F80; color: #000;  }
+.c22 { background-color:#FF0; color: #000; }
+.c23 { background-color:#8F0; color: #000;  }
+.c24 { background-color:#0F0; color: #000;  }
+.c25 { background-color:#0F8; color: #000;  }
+.c26 { background-color:#0FF; color: #000;  }
+.c27 { background-color:#08F; color: #FFF;  }
+.c28 { background-color:#00F; color: #FFF;  }
+.c29 { background-color:#80F; color: #FFF;  }
+.c30 { background-color:#F0F; color: #000;  }
+.c31 { background-color:#F08; color: #000;  }
     </style>
 </head>
 <body>
