--- a/dos33.html
+++ b/dos33.html
@@ -310,18 +310,18 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     022             INCLUDE <a class="c22" class="file" href="#FLOCNXB">FLOCNXB</a>,,2  ; $2FF7 .. $31C8, T1SE - T2S0
                     023             INCLUDE <a class="c23" class="file" href="#FLOCSEC">FLOCSEC</a>,,2  ; $31C9 .. $3396, T2S0 - T2S2
                     024             INCLUDE <a class="c24" class="file" href="#FVCBUFS">FVCBUFS</a>,,2  ; $3397 .. $35FD, T2S2 - T2S4
-                    025             INLUCDE <a class="c25" class="file" href="#BOOTLDR">BOOTLDR</a>,,2  ; $35FE .. $37FF, T0S0
+                    025             INLUCDE <a class="c25" class="file" href="#BOOTLDR">BOOTLDR</a>,,2  ; $35FE .. $37FF, T0S0 - T0S1
                     026             INCLUDE <a class="c26" class="file" href="#COREQUS">COREQUS</a>,,1  ; n/a
                     027             INCLUDE <a class="c27" class="file" href="#PRENIBL">PRENIBL</a>,,1  ; $3800 .. $3829, T0S2
-                    028             INCLUDE <a class="c28" class="file" href="#WRITRTN">WRITRTN</a>,,1  ; $382A .. $3???, T0S2 - T?S?
-                    029             INCLUDE <a class="c29" class="file" href="#POSTNRD">POSTNRD</a>,,1  ;
-                    030             INCLDUE <a class="c30" class="file" href="#RDADSEK">RDADSEK</a>,,1  ; $3??? .. $3C55, T?S? - T0$6
-                    031             INCLUDE <a class="c31" class="file" href="#MSWAITR">MSWAITR</a>,,1  ; $3C56 .. $3Cxx, T0$6 - T0$?
-                    032             INCLUDE <a class="c40" class="file" href="#WRITADR">WRITADR</a>,,1  ;
+                    028             INCLUDE <a class="c28" class="file" href="#WRITRTN">WRITRTN</a>,,1  ; $382A .. $3???, T0S2 - T0S?
+                    029             INCLUDE <a class="c29" class="file" href="#POSTNRD">POSTNRD</a>,,1  ; $3??? .. $3???, T0S? - T0S?
+                    030             INCLDUE <a class="c30" class="file" href="#RDADSEK">RDADSEK</a>,,1  ; $3??? .. $39FC, T?S? - T0S4
+                    031             INCLUDE <a class="c31" class="file" href="#MSWAITR">MSWAITR</a>,,1  ; $39FD .. $3C55, T0S4 - T0S6
+                    032             INCLUDE <a class="c40" class="file" href="#WRITADR">WRITADR</a>,,1  ; $3C56 .. $3CFF, T0S6
                     033             INCLUDE <a class="c41" class="file" href="#RWTSONE">RWTSONE</a>,,1  ; $3D00 .. $3DAA, T0S7
                     034             INCLUDE <a class="c42" class="file" href="#RWTSTWO">RWTSTWO</a>,,1  ; $3DAB .. $3EAE, T0S7 - T0S8
-                    035             INCLUDE <a class="c43" class="file" href="#FORMATR">FORMATR</a>,,1  ; $3EAF .. $3FC7, T0S8 - T?S?
-                    036             INCLUDE <a class="c44" class="file" href="#DOSPTCH">DOSPTCH</a>,,1  ; $3FC8 .. $3FFF
+                    035             INCLUDE <a class="c43" class="file" href="#FORMATR">FORMATR</a>,,1  ; $3EAF .. $3FC7, T0S8 - T0S9
+                    036             INCLUDE <a class="c44" class="file" href="#DOSPTCH">DOSPTCH</a>,,1  ; $3FC8 .. $3FFF, T0S9
 
 
 <hr>; === <a class="file" name="RELOCTR">RELOCTR</a> - Relocate DOS to high (48K) memory, Page <a class="page" name="page110">110</a>, <b class="ts">T0$A</b>, $<span class="adr">??00</span> ===<hr>
@@ -5665,7 +5665,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 39FA:A6 2B          202             LDX <a class="v" href="#SLOTTEMP">SLOTTEMP</a>    ;RESTORE X-REG
 39FC:60             203 <a class="f" name="SEEKRTS"    >SEEKRTS     </a>RTS             ;AND RETURN                     ; /sarcasm I don't know what we would do without you Captain Obvious!
 
-<hr>; === <a class="file" name="MSWAITR">MSWAITR</a> - Microsecond wait routine, Page <a class="page" name="page97">97</a>, <b class="ts">T0$4</b>-<b class="ts">T0$6</b> @ $55, $<span class="adr">BA00</span> - $<span class="adr">BC55</span> ===<hr>
+<hr>; === <a class="file" name="MSWAITR">MSWAITR</a> - Microsecond wait routine, Page <a class="page" name="page97">97</a>, <b class="ts">T0$4</b>-<b class="ts">T0$6</b> @ $55, $<span class="adr">B9FD</span> - $<span class="adr">BC55</span> ===<hr>
                     001                 SBTL '16-SECTOR MSWAIT'
                     002 **************************
                     003 *   MSWAIT SUBROUTINE    *
@@ -6972,18 +6972,18 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
  <span class="c22" href="#FLOCNXB">FLOCNXB</span> ; $2FF7 .. $31C8, T1SE - T2S0
  <span class="c23" href="#FLOCSEC">FLOCSEC</span> ; $31C9 .. $3396, T2S0 - T2S2
  <span class="c24" href="#FVCBUFS">FVCBUFS</span> ; $3397 .. $35FD, T2S2 - T2S4
- <span class="c25" href="#BOOTLDR">BOOTLDR</span> ; $35FE .. $37FF, T0S0
+ <span class="c25" href="#BOOTLDR">BOOTLDR</span> ; $35FE .. $37FF, T0S0 - T0S1
  <span class="c26" href="#COREQUS">COREQUS</span> ; n/a
  <span class="c27" href="#PRENIBL">PRENIBL</span> ; $3800 .. $3829, T0S2
- <span class="c28" href="#WRITRTN">WRITRTN</span> ; $382A .. $3???  T0S2
- <span class="c29" href="#POSTNRD">POSTNRD</span> ;
- <span class="c30" href="#RDADSEK">RDADSEK</span> ; $3??? .. $3C55, T?S? - T0$6
- <span class="c31" href="#MSWAITR">MSWAITR</span> ; $3C56 .. $3Cxx, T0$6 - T0$?
- <span class="c40" href="#WRITADR">WRITADR</span> ;
+ <span class="c28" href="#WRITRTN">WRITRTN</span> ; $382A .. $3???, T0S2 - T0S?
+ <span class="c29" href="#POSTNRD">POSTNRD</span> ; $3??? .. $3???, T0S? - T0S?
+ <span class="c30" href="#RDADSEK">RDADSEK</span> ; $3??? .. $39FC, T0S? - T0S4
+ <span class="c31" href="#MSWAITR">MSWAITR</span> ; $39FD .. $3C55, T0S4 - T0S6
+ <span class="c40" href="#WRITADR">WRITADR</span> ; $3C56 .. $3CFF, T0S6
  <span class="c41" href="#RWTSONE">RWTSONE</span> ; $3D00 .. $3DAA, T0S7
  <span class="c42" href="#RWTSTWO">RWTSTWO</span> ; $3DAB .. $3EAE, T0S7 - T0S8
- <span class="c43" href="#FORMATR">FORMATR</span> ; $3EAF .. $3FC7, T0S8 - T?S?
- <span class="c44" href="#DOSPTCH">DOSPTCH</span> ; $3FC8 .. $3FFF
+ <span class="c43" href="#FORMATR">FORMATR</span> ; $3EAF .. $3FC7, T0S8 - T0S9
+ <span class="c44" href="#DOSPTCH">DOSPTCH</span> ; $3FC8 .. $3FFF, T0S9
 </pre>
 
 
@@ -7979,7 +7979,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 39E0:B9 1D 3A 20 00 3A E6 26 |9.: .:f&amp;|
 39E8:D0 C3 20 00 3A 18 AD 78 |PC .:.-x|
 39F0:04 29 03 2A 05 2B AA BD |.).*.+*=|
-39F8:80 C0 A6 2B 60 00 00 00 |.@&amp;+`...|
+39F8:80 C0 A6 2B 60 <span class="c01">00 00 00</span> |.@&amp;+`...|
 3A00:A2 11 CA D0 FD E6 46 D0 |".JP}fFP|
 3A08:02 E6 47 38 E9 01 D0 F0 |.fG8i.Pp|
 3A10:60 01 30 28 24 20 1E 1D |`.0($ ..|
