--- a/dos33.html
+++ b/dos33.html
@@ -7979,103 +7979,103 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 39E0:B9 1D 3A 20 00 3A E6 26 |9.: .:f&amp;|
 39E8:D0 C3 20 00 3A 18 AD 78 |PC .:.-x|
 39F0:04 29 03 2A 05 2B AA BD |.).*.+*=|
-39F8:80 C0 A6 2B 60 <span class="c01">00 00 00</span> |.@&amp;+`...|
-3A00:A2 11 CA D0 FD E6 46 D0 |".JP}fFP|
-3A08:02 E6 47 38 E9 01 D0 F0 |.fG8i.Pp|
-3A10:60 01 30 28 24 20 1E 1D |`.0($ ..|
-3A18:1C 1C 1C 1C 1C 70 2C 26 |.....p,&amp;|
-3A20:22 1F 1E 1D 1C 1C 1C 1C |".......|
-3A28:1C 96 97 9A 9B 9D 9E 9F |........|
-3A30:A6 A7 AB AC AD AE AF B2 |&amp;'+,-./2|
-3A38:B3 B4 B5 B6 B7 B9 BA BB |345679:;|
-3A40:BC BD BE BF CB CD CE CF |&lt;=&gt;?KMNO|
-3A48:D3 D6 D7 D9 DA DB DC DD |SVWYZ[\]|
-3A50:DE DF E5 E6 E7 E9 EA EB |^_efgijk|
-3A58:EC ED EE EF F2 F3 F4 F5 |lmnorstu|
-3A60:F6 F7 F9 FA FB FC FD FE |vwyz{|}~|
-3A68:FF AE 5F 2A E0 1C F0 05 |.._*`.p.|
-3A70:A2 00 8E 5D 36 60 A9 FF |"..]6`).|
-3A78:8D FB 04 8D 0C C0 8D 0E |.{...@..|
-3A80:C0 4C 2F FB 00 00 00 00 |@L/{....|
-3A88:00 00 00 00 00 00 00 00 |........|
-3A90:00 00 00 00 00 00 00 01 |........|
-3A98:98 99 02 03 9C 04 05 06 |........|
-3AA0:A0 A1 A2 A3 A4 A5 07 08 | !"#$%..|
-3AA8:A8 A9 AA 09 0A 0B 0C 0D |()*.....|
-3AB0:B0 B1 0E 0F 10 11 12 13 |01......|
-3AB8:B8 14 15 16 17 18 19 1A |8.......|
-3AC0:C0 C1 C2 C3 C4 C5 C6 C7 |@ABCDEFG|
-3AC8:C8 C9 CA 1B CC 1C 1D 1E |HIJ.L...|
-3AD0:D0 D1 D2 1F D4 D5 20 21 |PQR.TU !|
-3AD8:D8 22 23 24 25 26 27 28 |X"#$%&amp;'(|
-3AE0:E0 E1 E2 E3 E4 29 2A 2B |`abcd)*+|
-3AE8:E8 2C 2D 2E 2F 30 31 32 |h,-./012|
-3AF0:F0 F1 33 34 35 36 37 38 |pq345678|
-3AF8:F8 39 3A 3B 3C 3D 3E 3F |x9:;&lt;=&gt;?|
-3B00:00 00 00 00 00 00 00 00 |........|
-3B08:00 00 00 00 00 00 00 00 |........|
-3B10:00 00 00 00 00 00 00 00 |........|
-3B18:00 00 00 00 00 00 00 00 |........|
-3B20:00 00 00 00 00 00 00 00 |........|
-3B28:00 00 00 00 00 00 00 00 |........|
-3B30:00 00 00 00 00 00 00 00 |........|
-3B38:00 00 00 00 00 00 00 00 |........|
-3B40:00 00 00 00 00 00 00 00 |........|
-3B48:00 00 00 00 00 00 00 00 |........|
-3B50:00 00 00 00 00 00 00 00 |........|
-3B58:00 00 00 00 00 00 00 00 |........|
-3B60:00 00 00 00 00 00 00 00 |........|
-3B68:00 00 00 00 00 00 00 00 |........|
-3B70:00 00 00 00 00 00 00 00 |........|
-3B78:00 00 00 00 00 00 00 00 |........|
-3B80:00 00 00 00 00 00 00 00 |........|
-3B88:00 00 00 00 00 00 00 00 |........|
-3B90:00 00 00 00 00 00 00 00 |........|
-3B98:00 00 00 00 00 00 00 00 |........|
-3BA0:00 00 00 00 00 00 00 00 |........|
-3BA8:00 00 00 00 00 00 00 00 |........|
-3BB0:00 00 00 00 00 00 00 00 |........|
-3BB8:00 00 00 00 00 00 00 00 |........|
-3BC0:00 00 00 00 00 00 00 00 |........|
-3BC8:00 00 00 00 00 00 00 00 |........|
-3BD0:00 00 00 00 00 00 00 00 |........|
-3BD8:00 00 00 00 00 00 00 00 |........|
-3BE0:00 00 00 00 00 00 00 00 |........|
-3BE8:00 00 00 00 00 00 00 00 |........|
-3BF0:00 00 00 00 00 00 00 00 |........|
-3BF8:00 00 00 00 00 00 00 00 |........|
-3C00:00 00 00 00 00 00 00 00 |........|
-3C08:00 00 00 00 00 00 00 00 |........|
-3C10:00 00 00 00 00 00 00 00 |........|
-3C18:00 00 00 00 00 00 00 00 |........|
-3C20:00 00 00 00 00 00 00 00 |........|
-3C28:00 00 00 00 00 00 00 00 |........|
-3C30:00 00 00 00 00 00 00 00 |........|
-3C38:00 00 00 00 00 00 00 00 |........|
-3C40:00 00 00 00 00 00 00 00 |........|
-3C48:00 00 00 00 00 00 00 00 |........|
-3C50:00 00 00 00 00 00 38 BD |......8=|
-3C58:8D C0 BD 8E C0 30 5E A9 |.@=.@0^)|
-3C60:FF 9D 8F C0 DD 8C C0 48 |...@].@H|
-3C68:68 20 C3 3C 20 C3 3C 9D |h C&lt; C&lt;.|
-3C70:8D C0 DD 8C C0 EA 88 D0 |.@].@j.P|
-3C78:F0 A9 D5 20 D5 3C A9 AA |p)U U&lt;)*|
-3C80:20 D5 3C A9 96 20 D5 3C | U&lt;). U&lt;|
-3C88:A5 41 20 C4 3C A5 44 20 |%A D&lt;%D |
-3C90:C4 3C A5 3F 20 C4 3C A5 |D&lt;%? D&lt;%|
-3C98:41 45 44 45 3F 48 4A 05 |AEDE?HJ.|
-3CA0:3E 9D 8D C0 BD 8C C0 68 |&gt;..@=.@h|
-3CA8:09 AA 20 D4 3C A9 DE 20 |.* T&lt;)^ |
-3CB0:D5 3C A9 AA 20 D5 3C A9 |U&lt;)* U&lt;)|
-3CB8:EB 20 D5 3C 18 BD 8E C0 |k U&lt;.=.@|
-3CC0:BD 8C C0 60 48 4A 05 3E |=.@`HJ.&gt;|
-3CC8:9D 8D C0 DD 8C C0 68 EA |..@].@hj|
-3CD0:EA EA 09 AA EA EA 48 68 |jj.*jjHh|
-3CD8:9D 8D C0 DD 8C C0 60 00 |..@].@`.|
-3CE0:00 00 00 00 00 00 00 00 |........|
-3CE8:00 00 00 00 00 00 00 00 |........|
-3CF0:00 00 00 00 00 00 00 00 |........|
-3CF8:00 00 00 00 00 00 00 00 |........|
+39F8:80 C0 A6 2B 60 <span class="c31">00 00 00</span> |.@&amp;+`...|
+3A00:<span class="c31">A2 11 CA D0 FD E6 46 D0</span> |".JP}fFP|
+3A08:<span class="c31">02 E6 47 38 E9 01 D0 F0</span> |.fG8i.Pp|
+3A10:<span class="c31">60 01 30 28 24 20 1E 1D</span> |`.0($ ..|
+3A18:<span class="c31">1C 1C 1C 1C 1C 70 2C 26</span> |.....p,&amp;|
+3A20:<span class="c31">22 1F 1E 1D 1C 1C 1C 1C</span> |".......|
+3A28:<span class="c31">1C 96 97 9A 9B 9D 9E 9F</span> |........|
+3A30:<span class="c31">A6 A7 AB AC AD AE AF B2</span> |&amp;'+,-./2|
+3A38:<span class="c31">B3 B4 B5 B6 B7 B9 BA BB</span> |345679:;|
+3A40:<span class="c31">BC BD BE BF CB CD CE CF</span> |&lt;=&gt;?KMNO|
+3A48:<span class="c31">D3 D6 D7 D9 DA DB DC DD</span> |SVWYZ[\]|
+3A50:<span class="c31">DE DF E5 E6 E7 E9 EA EB</span> |^_efgijk|
+3A58:<span class="c31">EC ED EE EF F2 F3 F4 F5</span> |lmnorstu|
+3A60:<span class="c31">F6 F7 F9 FA FB FC FD FE</span> |vwyz{|}~|
+3A68:<span class="c31">FF AE 5F 2A E0 1C F0 05</span> |.._*`.p.|
+3A70:<span class="c31">A2 00 8E 5D 36 60 A9 FF</span> |"..]6`).|
+3A78:<span class="c31">8D FB 04 8D 0C C0 8D 0E</span> |.{...@..|
+3A80:<span class="c31">C0 4C 2F FB 00 00 00 00</span> |@L/{....|
+3A88:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3A90:<span class="c31">00 00 00 00 00 00 00 01</span> |........|
+3A98:<span class="c31">98 99 02 03 9C 04 05 06</span> |........|
+3AA0:<span class="c31">A0 A1 A2 A3 A4 A5 07 08</span> | !"#$%..|
+3AA8:<span class="c31">A8 A9 AA 09 0A 0B 0C 0D</span> |()*.....|
+3AB0:<span class="c31">B0 B1 0E 0F 10 11 12 13</span> |01......|
+3AB8:<span class="c31">B8 14 15 16 17 18 19 1A</span> |8.......|
+3AC0:<span class="c31">C0 C1 C2 C3 C4 C5 C6 C7</span> |@ABCDEFG|
+3AC8:<span class="c31">C8 C9 CA 1B CC 1C 1D 1E</span> |HIJ.L...|
+3AD0:<span class="c31">D0 D1 D2 1F D4 D5 20 21</span> |PQR.TU !|
+3AD8:<span class="c31">D8 22 23 24 25 26 27 28</span> |X"#$%&amp;'(|
+3AE0:<span class="c31">E0 E1 E2 E3 E4 29 2A 2B</span> |`abcd)*+|
+3AE8:<span class="c31">E8 2C 2D 2E 2F 30 31 32</span> |h,-./012|
+3AF0:<span class="c31">F0 F1 33 34 35 36 37 38</span> |pq345678|
+3AF8:<span class="c31">F8 39 3A 3B 3C 3D 3E 3F</span> |x9:;&lt;=&gt;?|
+3B00:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B08:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B10:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B18:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B20:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B28:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B30:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B38:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B40:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B48:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B50:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B58:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B60:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B68:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B70:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B78:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B80:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B88:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B90:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B98:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BA0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BA8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BB0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BB8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BC0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BC8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BD0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BD8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BE0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BE8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BF0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3BF8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C00:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C08:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C10:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C18:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C20:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C28:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C30:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C38:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C40:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C48:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C50:<span class="c31">00 00 00 00 00 00</span> <span class="c40">38 BD</span> |......8=|
+3C58:<span class="c40">8D C0 BD 8E C0 30 5E A9</span> |.@=.@0^)|
+3C60:<span class="c40">FF 9D 8F C0 DD 8C C0 48</span> |...@].@H|
+3C68:<span class="c40">68 20 C3 3C 20 C3 3C 9D</span> |h C&lt; C&lt;.|
+3C70:<span class="c40">8D C0 DD 8C C0 EA 88 D0</span> |.@].@j.P|
+3C78:<span class="c40">F0 A9 D5 20 D5 3C A9 AA</span> |p)U U&lt;)*|
+3C80:<span class="c40">20 D5 3C A9 96 20 D5 3C</span> | U&lt;). U&lt;|
+3C88:<span class="c40">A5 41 20 C4 3C A5 44 20</span> |%A D&lt;%D |
+3C90:<span class="c40">C4 3C A5 3F 20 C4 3C A5</span> |D&lt;%? D&lt;%|
+3C98:<span class="c40">41 45 44 45 3F 48 4A 05</span> |AEDE?HJ.|
+3CA0:<span class="c40">3E 9D 8D C0 BD 8C C0 68</span> |&gt;..@=.@h|
+3CA8:<span class="c40">09 AA 20 D4 3C A9 DE 20</span> |.* T&lt;)^ |
+3CB0:<span class="c40">D5 3C A9 AA 20 D5 3C A9</span> |U&lt;)* U&lt;)|
+3CB8:<span class="c40">EB 20 D5 3C 18 BD 8E C0</span> |k U&lt;.=.@|
+3CC0:<span class="c40">BD 8C C0 60 48 4A 05 3E</span> |=.@`HJ.&gt;|
+3CC8:<span class="c40">9D 8D C0 DD 8C C0 68 EA</span> |..@].@hj|
+3CD0:<span class="c40">EA EA 09 AA EA EA 48 68</span> |jj.*jjHh|
+3CD8:<span class="c40">9D 8D C0 DD 8C C0 60 00</span> |..@].@`.|
+3CE0:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
+3CE8:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
+3CF0:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
+3CF8:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
 3D00:<span class="c41">84 48 85 49 A0 02 8C F8</span> |.H.I ..x|
 3D08:<span class="c41">06 A0 04 8C F8 04 A0 01</span> |. ..x. .|
 3D10:<span class="c41">B1 48 AA A0 0F D1 48 F0</span> |1H* .QHp|
