--- a/dos33.html
+++ b/dos33.html
@@ -315,7 +315,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     027             INCLUDE <a class="c27" class="file" href="#PRENIBL">PRENIBL</a>,,1  ; $3800 .. $3829, T0S2
                     028             INCLUDE <a class="c28" class="file" href="#WRITRTN">WRITRTN</a>,,1  ; $382A .. $3???, T0S2 - T0S?
                     029             INCLUDE <a class="c29" class="file" href="#POSTNRD">POSTNRD</a>,,1  ; $3??? .. $3???, T0S? - T0S?
-                    030             INCLDUE <a class="c30" class="file" href="#RDADSEK">RDADSEK</a>,,1  ; $3??? .. $39FC, T?S? - T0S4
+                    030             INCLDUE <a class="c30" class="file" href="#RDADSEK">RDADSEK</a>,,1  ; $3??? .. $39FC, T?S? - T0S3
                     031             INCLUDE <a class="c31" class="file" href="#MSWAITR">MSWAITR</a>,,1  ; $39FD .. $3C55, T0S4 - T0S6
                     032             INCLUDE <a class="c40" class="file" href="#WRITADR">WRITADR</a>,,1  ; $3C56 .. $3CFF, T0S6
                     033             INCLUDE <a class="c41" class="file" href="#RWTSONE">RWTSONE</a>,,1  ; $3D00 .. $3DAA, T0S7
@@ -7851,8 +7851,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 35E0:<span class="c24">FE FC FC FC FF FC FC FE</span> |~|||.||~|
 35E8:<span class="c24">FE FC FE FC FC FC FF FC</span> |~|~|||.||
 35F0:<span class="c24">FC FC FE FC FC FF FD FE</span> |||~||.}~|
-35F8:<span class="c24">FC FC FD FC FC FF</span> <span class="c25">FD FC</span> |||}||.}||
-3600:<span class="c25">01 A5 27 C9 09 D0 18 A5</span> |.%'I.P.%|
+35F8:<span class="c24">FC FC FD FC FC FF</span> <span class="c25">FD FC</span> |||}||.}|| BOOTLDR, $35FE .. $37FF, T0S0 - T0S1
+3600:<span class="c25">01 A5 27 C9 09 D0 18 A5</span> |.%'I.P.%| T0S0
 3608:<span class="c25">2B 4A 4A 4A 4A 09 C0 85</span> |+JJJJ.@.|
 3610:<span class="c25">3F A9 5C 85 3E 18 AD FE</span> |?)\.&gt;.-~|
 3618:<span class="c25">08 6D FF 08 8D FE 08 AE</span> |.m...~..|
@@ -7884,7 +7884,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 36E8:<span class="c25">00 00 00 00 00 00 00 00</span> |........|
 36F0:<span class="c25">00 00 00 00 00 00 00 00</span> |........|
 36F8:<span class="c25">00 00 00 00 00 00 36 09</span> |......6.|
-3700:<span class="c25">8E E9 37 8E F7 37 A9 01</span> |.i7.w7).|
+3700:<span class="c25">8E E9 37 8E F7 37 A9 01</span> |.i7.w7).| T0S1
 3708:<span class="c25">8D F8 37 8D EA 37 AD E0</span> |.x7.j7-`|
 3710:<span class="c25">37 8D E1 37 A9 02 8D EC</span> |7.a7)..l|
 3718:<span class="c25">37 A9 04 8D ED 37 AC E7</span> |7)..m7,g|
@@ -7916,7 +7916,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 37E8:<span class="c25">01 60 01 00 00 00 FB 37</span> |.`....{7|
 37F0:<span class="c25">00 00 00 01 00 00 00 60</span> |.......`|
 37F8:<span class="c25">01 00 00 00 01 EF D8 00</span> |.....oX.|
-3800:<span class="c27">A2 00 A0 02 88 B1 3E 4A</span> |". ..1&gt;J|
+3800:<span class="c27">A2 00 A0 02 88 B1 3E 4A</span> |". ..1&gt;J| PRENIBL, $3800 .. $3829, T0S2
 3808:<span class="c27">3E 00 3C 4A 3E 00 3C 99</span> |&gt;.&lt;J&gt;.&lt;.|
 3810:<span class="c27">00 3B E8 E0 56 90 ED A2</span> |.;h`V.m"|
 3818:<span class="c27">00 98 D0 E8 A2 55 BD 00</span> |..Ph"U=.|
@@ -7948,7 +7948,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 38E8:D0 F4 EA BD 8C C0 10 FB |Ptj=.@.{|
 38F0:C9 AA D0 F2 A0 56 BD 8C |I*Pr V=.|
 38F8:C0 10 FB C9 AD D0 E7 A9 |@.{I-Pg)|
-3900:00 88 84 26 BC 8C C0 10 |...&amp;&lt;.@.|
+3900:00 88 84 26 BC 8C C0 10 |...&amp;&lt;.@.| T0S3
 3908:FB 59 00 3A A4 26 99 00 |{Y.:$&amp;..|
 3910:3C D0 EE 84 26 BC 8C C0 |&lt;Pn.&amp;&lt;.@|
 3918:10 FB 59 00 3A A4 26 99 |.{Y.:$&amp;.|
@@ -7979,8 +7979,8 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 39E0:B9 1D 3A 20 00 3A E6 26 |9.: .:f&amp;|
 39E8:D0 C3 20 00 3A 18 AD 78 |PC .:.-x|
 39F0:04 29 03 2A 05 2B AA BD |.).*.+*=|
-39F8:80 C0 A6 2B 60 <span class="c31">00 00 00</span> |.@&amp;+`...|
-3A00:<span class="c31">A2 11 CA D0 FD E6 46 D0</span> |".JP}fFP|
+39F8:80 C0 A6 2B 60 <span class="c31">00 00 00</span> |.@&amp;+`...| MSWAITR, $39FD .. $3C55, T0S3 - T0S6
+3A00:<span class="c31">A2 11 CA D0 FD E6 46 D0</span> |".JP}fFP| T0S4
 3A08:<span class="c31">02 E6 47 38 E9 01 D0 F0</span> |.fG8i.Pp|
 3A10:<span class="c31">60 01 30 28 24 20 1E 1D</span> |`.0($ ..|
 3A18:<span class="c31">1C 1C 1C 1C 1C 70 2C 26</span> |.....p,&amp;|
@@ -8012,7 +8012,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3AE8:<span class="c31">E8 2C 2D 2E 2F 30 31 32</span> |h,-./012|
 3AF0:<span class="c31">F0 F1 33 34 35 36 37 38</span> |pq345678|
 3AF8:<span class="c31">F8 39 3A 3B 3C 3D 3E 3F</span> |x9:;&lt;=&gt;?|
-3B00:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3B00:<span class="c31">00 00 00 00 00 00 00 00</span> |........| T0S5
 3B08:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3B10:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3B18:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
@@ -8044,7 +8044,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3BE8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3BF0:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3BF8:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
-3C00:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
+3C00:<span class="c31">00 00 00 00 00 00 00 00</span> |........| T0S6
 3C08:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3C10:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3C18:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
@@ -8054,7 +8054,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3C38:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3C40:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
 3C48:<span class="c31">00 00 00 00 00 00 00 00</span> |........|
-3C50:<span class="c31">00 00 00 00 00 00</span> <span class="c40">38 BD</span> |......8=|
+3C50:<span class="c31">00 00 00 00 00 00</span> <span class="c40">38 BD</span> |......8=| WRITADR, $3C56 .. $3CFF, T0S6
 3C58:<span class="c40">8D C0 BD 8E C0 30 5E A9</span> |.@=.@0^)|
 3C60:<span class="c40">FF 9D 8F C0 DD 8C C0 48</span> |...@].@H|
 3C68:<span class="c40">68 20 C3 3C 20 C3 3C 9D</span> |h C&lt; C&lt;.|
@@ -8076,7 +8076,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 3CE8:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
 3CF0:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
 3CF8:<span class="c40">00 00 00 00 00 00 00 00</span> |........|
-3D00:<span class="c41">84 48 85 49 A0 02 8C F8</span> |.H.I ..x|
+3D00:<span class="c41">84 48 85 49 A0 02 8C F8</span> |.H.I ..x| RWTSONE, $3D00 .. $3DAA, T0S7
 3D08:<span class="c41">06 A0 04 8C F8 04 A0 01</span> |. ..x. .|
 3D10:<span class="c41">B1 48 AA A0 0F D1 48 F0</span> |1H* .QHp|
 3D18:<span class="c41">1B 8A 48 B1 48 AA 68 48</span> |..H1H*hH|
